# polars-labrodq-extension

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.yml
.github/workflows/: docs.yml
api/CheckConfig/: index.html
api/DQConfig/: index.html
api/DataFrameDQNamespace/: index.html
docs/: api.md  getting-started.md  index.md
docs/api/: CheckConfig.md  DQConfig.md  DataFrameDQNamespace.md
getting-started/: index.html
search/: search_index.json
src/polars_labrodq_extension/: __init__.py
src/polars_labrodq_extension/config/: loader.py  models.py
src/polars_labrodq_extension/core/: types.py
src/polars_labrodq_extension/polars_ns/: __init__.py  dataframe.py
